--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -360,23 +360,36 @@ else if (t.startsWith('#IMG:')) {
     }
 
     function checkAnswer(btn) {
-        const inp = btn.previousElementSibling;
-        const correct = btn.getAttribute('data-answer').toLowerCase();
-        if (inp.value.trim().toLowerCase() === correct) {
-            inp.style.background = 'lightgreen';
-            if (!btn.disabled) { clickedAnswers++; btn.disabled = true; }
-        } else {
-            inp.style.background = 'lightcoral';
-            if (!btn.parentNode.querySelector('.see-answer-btn')) {
-                const b = document.createElement('button');
-                b.className = 'see-answer-btn';
-                b.textContent = 'See Answer';
-                b.onclick = () => inp.value = correct;
-                btn.parentNode.appendChild(b);
-            }
+    const inp = btn.parentNode.querySelector('.answer-input');
+    const correct = btn.getAttribute('data-answer').toLowerCase();
+
+    if (inp.value.trim().toLowerCase() === correct) {
+        inp.style.background = 'lightgreen';
+        if (!btn.disabled) {
+            clickedAnswers++;
+            btn.disabled = true;
         }
-        if (clickedAnswers === totalAnswers) showCompletionMessage();
+    } else {
+        inp.style.background = 'lightcoral';
+
+        if (!btn.parentNode.querySelector('.see-answer-btn')) {
+            const b = document.createElement('button');
+            b.className = 'see-answer-btn';
+            b.textContent = 'See Answer';
+            b.onclick = () => {
+                inp.value = correct;
+                const ansSpan = btn.parentNode.querySelector('.answer');
+                if (ansSpan) ansSpan.style.display = 'inline';
+                b.disabled = true;
+            };
+            btn.parentNode.appendChild(b);
+        }
     }
+
+    if (clickedAnswers === totalAnswers) {
+        showCompletionMessage();
+    }
+}
 
     function showCompletionMessage() {
         document.getElementById('completionModal').style.display = 'block';
