--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -388,13 +388,30 @@ if (!btn.parentNode.querySelector('.see-answer-btn')) {
         showCompletionMessage();
     }
 }
+    
+   function showCompletionMessage() {
+    document.getElementById('completionModal').style.display = 'block';
 
-    function showCompletionMessage() {
-        document.getElementById('completionModal').style.display = 'block';
+    // → grava no Firebase que esta fase (level/unit) foi completada
+    const { level, unit } = getLevelAndUnitFromURL();
+    saveProgress(level, unit);
+}
+/**
+ * Grava no Firebase que a fase foi completada
+ */
+function saveProgress(level, unit) {
+    const user = firebase.auth().currentUser;
+    if (!user) {
+        console.warn('Usuário não autenticado — não será salvo progresso');
+        return;
     }
-    function closeModal() {
-        document.getElementById('completionModal').style.display = 'none';
-    }
+    const userId = user.uid;
+    firebase.database()
+        .ref(`users/${userId}/progress/${level}/${unit}`)
+        .set({ completed: true })
+        .then(() => console.log('Progresso salvo:', level, unit))
+        .catch(console.error);
+}
 
     function generatePDF() {
         const { level, unit } = getLevelAndUnitFromURL();
