--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -387,7 +387,10 @@ if (!btn.parentNode.querySelector('.see-answer-btn')) {
     if (clickedAnswers === totalAnswers) {
         showCompletionMessage();
     }
-}
+ ```js
+   function closeModal() {
+       document.getElementById('completionModal').style.display = 'none';
+   }
     
    function showCompletionMessage() {
     document.getElementById('completionModal').style.display = 'block';
@@ -407,7 +410,7 @@ function saveProgress(level, unit) {
     }
     const userId = user.uid;
     firebase.database()
-        .ref(`users/${userId}/progress/${level}/${unit}`)
+        .ref(`usuarios/${userId}/progresso/${level}/${unit}`)
         .set({ completed: true })
         .then(() => console.log('Progresso salvo:', level, unit))
         .catch(console.error);
