--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -258,6 +258,16 @@
     };
     firebase.initializeApp(firebaseConfig);
 
+firebase.auth().onAuthStateChanged(user => {
+    if (user) {
+        console.log('✅ Usuário logado:', user.uid);
+    } else {
+        console.warn('❌ Nenhum usuário está logado. Redirecionando para login...');
+        // redirecionar para sua página de login ou mostrar alerta
+        window.location.href = '../../../login.html'; // ajuste para o caminho correto
+    }
+});
+
     let totalAnswers = 0;
     let clickedAnswers = 0;
     let isTextFileLoaded = false;
