--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -408,7 +408,13 @@ if (!btn.parentNode.querySelector('.see-answer-btn')) {
 
     // → grava no Firebase que esta fase (level/unit) foi completada
     const { level, unit } = getLevelAndUnitFromURL();
-    saveProgress(level, unit);
+   firebase.auth().onAuthStateChanged(user => {
+    if (user) {
+        saveProgress(level, unit);
+    } else {
+        console.warn('❌ Usuário não logado no momento de salvar.');
+    }
+});
 }
 
 function saveProgress(level, unit) {
