--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -258,19 +258,30 @@
     };
     firebase.initializeApp(firebaseConfig);
 
+let isUserChecked = false;
+
 firebase.auth().onAuthStateChanged(user => {
     if (user) {
         console.log('✅ Usuário logado:', user.uid);
     } else {
-        console.warn('❌ Nenhum usuário está logado. Redirecionando para login...');
-        // redirecionar para sua página de login ou mostrar alerta
-        window.location.href = '../../../login.html'; // ajuste para o caminho correto
+        console.warn('⚠️ Nenhum usuário detectado ainda.');
     }
+
+    isUserChecked = true;
+    // Agora é seguro carregar o restante da lógica que depende do usuário
+    initializeAppContent(); 
 });
 
     let totalAnswers = 0;
     let clickedAnswers = 0;
     let isTextFileLoaded = false;
+
+function initializeAppContent() {
+    loadTextFile();
+    setupBackButton();
+    updateImagePath();
+    loadProfessorButtons();
+}
 
     function getLevelAndUnitFromURL() {
         const params = new URLSearchParams(window.location.search);
