--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -517,12 +517,17 @@ function saveProgress(level, unit) {
             .catch(() => img.src = 'default-image.png');
     }  
 
-    document.addEventListener('DOMContentLoaded', () => {
-        loadTextFile();
-        setupBackButton();
-        updateImagePath();
-        loadProfessorButtons();
+   document.addEventListener('DOMContentLoaded', () => {
+    firebase.auth().onAuthStateChanged(user => {
+        if (user) {
+            console.log('✅ Usuário logado:', user.uid);
+            initializeAppContent();
+        } else {
+            console.warn('❌ Usuário não autenticado. Redirecionando para login...');
+            window.location.href = '../../../login.html'; // ou caminho adequado
+        }
     });
+});
 
 function getPhaseFromURL() {
     const params = new URLSearchParams(window.location.search);
