--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -524,7 +524,7 @@ function saveProgress(level, unit) {
             initializeAppContent();
         } else {
             console.warn('❌ Usuário não autenticado. Redirecionando para login...');
-            window.location.href = '../../../login.html'; // ou caminho adequado
+            window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
         }
     });
 });
