--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -263,13 +263,21 @@ let isUserChecked = false;
 firebase.auth().onAuthStateChanged(user => {
     if (user) {
         console.log('✅ Usuário logado:', user.uid);
+        initializeAppContent();
     } else {
-        console.warn('⚠️ Nenhum usuário detectado ainda.');
-    }
+        console.warn('⚠️ Usuário ainda não autenticado. Aguardando confirmação...');
 
-    isUserChecked = true;
-    // Agora é seguro carregar o restante da lógica que depende do usuário
-    initializeAppContent(); 
+        setTimeout(() => {
+            const currentUser = firebase.auth().currentUser;
+            if (!currentUser) {
+                console.error('⛔ Sem usuário confirmado após espera. Redirecionando para login.');
+                window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
+            } else {
+                console.log('✅ Usuário confirmado após espera:', currentUser.uid);
+                initializeAppContent();
+            }
+        }, 1000); // ou aumente para 1500ms se precisar
+    }
 });
 
     let totalAnswers = 0;
@@ -515,19 +523,7 @@ function saveProgress(level, unit) {
         fetch(path)
             .then(r => r.ok ? img.src = path : Promise.reject())
             .catch(() => img.src = 'default-image.png');
-    }  
-
-   document.addEventListener('DOMContentLoaded', () => {
-    firebase.auth().onAuthStateChanged(user => {
-        if (user) {
-            console.log('✅ Usuário logado:', user.uid);
-            initializeAppContent();
-        } else {
-            console.warn('❌ Usuário não autenticado. Redirecionando para login...');
-            window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
-        }
-    });
-});
+    }    
 
 function getPhaseFromURL() {
     const params = new URLSearchParams(window.location.search);
