--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -206,7 +206,7 @@
         }
     </style>
 </head>
-<body>
+<body style="visibility:hidden">
 
 <div id="completionModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); z-index:9999;">
     <div style="background:white; padding:20px; border-radius:8px; max-width:400px; margin:100px auto; text-align:center;">
@@ -258,30 +258,13 @@
     };
     firebase.initializeApp(firebaseConfig);
 
-let isUserChecked = false;
-
-let triedWaiting = false;
-
 firebase.auth().onAuthStateChanged(user => {
     if (user) {
         console.log('✅ Usuário logado:', user.uid);
-        initializeAppContent();
-    } else if (!triedWaiting) {
-        // Espera um pouco mais ANTES de tomar a decisão de redirecionar
-        triedWaiting = true;
-        console.warn('🕒 Aguardando autenticação do Firebase...');
-        setTimeout(() => {
-            const retryUser = firebase.auth().currentUser;
-            if (retryUser) {
-                console.log('✅ Usuário autenticado após espera:', retryUser.uid);
-                initializeAppContent();
-            } else {
-                console.error('⛔ Usuário não autenticado após tentativa. Redirecionando.');
-                window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
-            }
-        }, 1500); // tempo de espera um pouco maior para dar tempo ao Firebase
+        document.body.style.visibility = 'visible'; // agora pode mostrar
+        initializeAppContent(); // só inicia conteúdo depois de logado
     } else {
-        console.error('⛔ Usuário não autenticado. Redirecionando.');
+        console.warn('⛔ Usuário não autenticado. Redirecionando...');
         window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
     }
 });
