--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -258,24 +258,14 @@
     };
     firebase.initializeApp(firebaseConfig);
 
-firebase.auth().onAuthStateChanged(user => {
-    if (user) {
-        console.log('✅ Usuário logado:', user.uid);
+firebase.auth().onAuthStateChanged(function(user) {
+    if (user && user.uid) {
+        console.log('✅ Usuário autenticado:', user.uid);
         document.body.style.visibility = 'visible';
         initializeAppContent();
     } else {
-        // aguarda 1 segundo para garantir que Firebase teve tempo de recuperar o usuário
-        setTimeout(() => {
-            const currentUser = firebase.auth().currentUser;
-            if (currentUser) {
-                console.log('⚠️ currentUser estava atrasado, agora identificado:', currentUser.uid);
-                document.body.style.visibility = 'visible';
-                initializeAppContent();
-            } else {
-                console.warn('⛔ Usuário não autenticado. Redirecionando...');
-                window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
-            }
-        }, 1000);
+        console.warn('⛔ Nenhum usuário autenticado. Redirecionando para login...');
+        window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
     }
 });
 
