--- a/index gustavo- Copy.html
+++ b/index gustavo- Copy.html
@@ -143,9 +143,7 @@
       measurementId:"G-07VVJG9LRS"
     };
     if(!firebase.apps.length){firebase.initializeApp(firebaseConfig);}
-    // Queremos que o login sobreviva a recarregamentos e novas abas
-firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL)
-    .catch(console.error);
+    firebase.auth().setPersistence(firebase.auth.Auth.Persistence.SESSION).catch(console.error);
 
     /* ---------- Função robusta para detectar standalone ---------- */
     function isInStandaloneMode(){
