--- a/Atividades/Grammar/indexantigo.html
+++ b/Atividades/Grammar/indexantigo.html
@@ -206,7 +206,7 @@
         }
     </style>
 </head>
-<body style="visibility:hidden">
+<body>
 
 <div id="completionModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); z-index:9999;">
     <div style="background:white; padding:20px; border-radius:8px; max-width:400px; margin:100px auto; text-align:center;">
@@ -258,27 +258,9 @@
     };
     firebase.initializeApp(firebaseConfig);
 
-firebase.auth().onAuthStateChanged(function(user) {
-    if (user && user.uid) {
-        console.log('✅ Usuário autenticado:', user.uid);
-        document.body.style.visibility = 'visible';
-        initializeAppContent();
-    } else {
-        console.warn('⛔ Nenhum usuário autenticado. Redirecionando para login...');
-        window.location.href = 'https://hannahenglishcourse.netlify.app/formulario/login';
-    }
-});
-
     let totalAnswers = 0;
     let clickedAnswers = 0;
     let isTextFileLoaded = false;
-
-function initializeAppContent() {
-    loadTextFile();
-    setupBackButton();
-    updateImagePath();
-    loadProfessorButtons();
-}
 
     function getLevelAndUnitFromURL() {
         const params = new URLSearchParams(window.location.search);
@@ -293,7 +275,7 @@ function initializeAppContent() {
         totalAnswers = 0;
 
         const { level, unit } = getLevelAndUnitFromURL();
-        const filePath = `../../${level}/${unit}/DataGrammar3/texto.txt`;
+        const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
         fetch(filePath)
             .then(response => {
@@ -378,74 +360,34 @@ else if (t.startsWith('#IMG:')) {
     }
 
     function checkAnswer(btn) {
-    const inp = btn.parentNode.querySelector('.answer-input');
-    const correct = btn.getAttribute('data-answer').toLowerCase();
-
-    if (inp.value.trim().toLowerCase() === correct) {
-        inp.style.background = 'lightgreen';
-        if (!btn.disabled) {
-            clickedAnswers++;
-            btn.disabled = true;
+        const inp = btn.previousElementSibling;
+        const correct = btn.getAttribute('data-answer').toLowerCase();
+        if (inp.value.trim().toLowerCase() === correct) {
+            inp.style.background = 'lightgreen';
+            if (!btn.disabled) { clickedAnswers++; btn.disabled = true; }
+        } else {
+            inp.style.background = 'lightcoral';
+            if (!btn.parentNode.querySelector('.see-answer-btn')) {
+                const b = document.createElement('button');
+                b.className = 'see-answer-btn';
+                b.textContent = 'See Answer';
+                b.onclick = () => inp.value = correct;
+                btn.parentNode.appendChild(b);
+            }
         }
-    } else {
-        inp.style.background = 'lightcoral';
-if (!btn.parentNode.querySelector('.see-answer-btn')) {
-    const b = document.createElement('button');
-    b.className = 'see-answer-btn';
-    b.textContent = 'See Answer';
-    b.onclick = () => {
-        const ansSpan = btn.parentNode.querySelector('.answer');
-        if (ansSpan) ansSpan.style.display = 'inline';
-        b.disabled = true;
-    };
-    btn.parentNode.appendChild(b);
-}        
+        if (clickedAnswers === totalAnswers) showCompletionMessage();
     }
 
-    if (clickedAnswers === totalAnswers) {
-        showCompletionMessage();
+    function showCompletionMessage() {
+        document.getElementById('completionModal').style.display = 'block';
     }
-}
-
-   function closeModal() {
-       document.getElementById('completionModal').style.display = 'none';
-   }
-    
-   function showCompletionMessage() {
-    document.getElementById('completionModal').style.display = 'block';
-
-    // → grava no Firebase que esta fase (level/unit) foi completada
-    const { level, unit } = getLevelAndUnitFromURL();
-   firebase.auth().onAuthStateChanged(user => {
-    if (user) {
-        saveProgress(level, unit);
-    } else {
-        console.warn('❌ Usuário não logado no momento de salvar.');
+    function closeModal() {
+        document.getElementById('completionModal').style.display = 'none';
     }
-});
-}
-
-function saveProgress(level, unit) {
-    const user = firebase.auth().currentUser;
-    if (!user) {
-        console.warn('Usuário não autenticado — não será salvo progresso');
-        return;
-    }
-
-    const userId = user.uid;
-    const currentPhase = getPhaseFromURL();
-    const phaseKey = currentPhase ? `fase${currentPhase}` : 'fase1'; // padrão para fase1 se não tiver na URL
-
-    firebase.database()
-        .ref(`usuarios/${userId}/progresso/${level}/${unit}`)
-        .update({ [phaseKey]: true })
-        .then(() => console.log(`✅ Progresso salvo em usuarios/${userId}/progresso/${level}/${unit}/${phaseKey}`))
-        .catch(error => console.error('Erro ao salvar progresso:', error));
-}
 
     function generatePDF() {
         const { level, unit } = getLevelAndUnitFromURL();
-        const filePath = `../../${level}/${unit}/DataGrammar3/texto.txt`;
+        const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
         fetch(filePath)
             .then(r => r.text())
@@ -493,7 +435,7 @@ function saveProgress(level, unit) {
                 btn.appendChild(img);
                 btn.onclick = () => {
                     // monta o caminho do lesson.txt daquela aula
-                    const lessonPath = `../../${level}/${unit}/DataGrammar3/aulas/aula${i}/lesson.txt`;
+                    const lessonPath = `../../${level}/${unit}/DataGrammar/aulas/aula${i}/lesson.txt`;
                     // redireciona para o index na pasta Aulas_traduzidas,
                     // que vai ler esse lesson.txt via URL
                     window.location.href =
@@ -507,17 +449,19 @@ function saveProgress(level, unit) {
 
     function updateImagePath() {
         const { level, unit } = getLevelAndUnitFromURL();
-        const path = `../../${level}/${unit}/DataGrammar3/image.png`;
+        const path = `../../${level}/${unit}/DataGrammar/image.png`;
         const img = document.getElementById('main-image');
         fetch(path)
             .then(r => r.ok ? img.src = path : Promise.reject())
             .catch(() => img.src = 'default-image.png');
-    }    
+    }  
 
-function getPhaseFromURL() {
-    const params = new URLSearchParams(window.location.search);
-    return params.get('fase');
-}
+    document.addEventListener('DOMContentLoaded', () => {
+        loadTextFile();
+        setupBackButton();
+        updateImagePath();
+        loadProfessorButtons();
+    });
 </script>
 </body>
 </html>
