--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -40,6 +40,7 @@
   .grammar-table{width:100%;border-collapse:collapse;margin:15px 0;}
   .grammar-table th,.grammar-table td{border:1px solid #ccc;padding:8px;text-align:left;}
   .grammar-table th{background:#28a745;color:#fff;}
+.grammar-table td {background: #fff;}
 </style>
 </head>
 
